--- a/Day 1/Index.html
+++ b/Day 1/Index.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<p>My First GitHub Demo Page</p>
+<table>
+    <form action="" method="post">
+        <tr>
+        <td>Name:</td>
+        <td><label><input type="text" name="t1"></label></td>
+        </tr>
+        <tr>
+        <td>E-Mail Id:</td>
+        <td><label><input type="email" name="t2"></label></td>
+        </tr>
+        <tr>
+        <td>Password:</td>
+        <td><label><input type="password" name="t3"></label></td>
+        </tr>
+        <tr>
+        <td>Address:</td>
+        <td><label><textarea></textarea></label></td>
+        </tr>
+        <tr>
+        <td>Branch:</td>
+        <td><label>CSE<input type="radio" name="t5" id=" "></label><label>CSE DS<input type="radio" name="t5" id=""></label></td>
+        </tr>
+    </form>
+</table>
 </body>
 </html>
