--- a/Day 2/VideoGallery.html
+++ b/Day 2/VideoGallery.html
@@ -25,6 +25,25 @@
             </video>
         </td>
     </tr>
+    <tr>
+        <td>
+            <video width="500" height="320" controls>
+                <source src="Video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </td>
+        <td>
+            <video width="500" height="320" controls>
+                <source src="Video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </td>
+        <td>
+            <video width="500" height="320" controls>
+                <source src="Video.mp4" type="video/mp4">
+            </video>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
