--- a/Day 2/VideoGallery.html
+++ b/Day 2/VideoGallery.html
@@ -3,43 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <table>
     <tr>
+        <td colspan="3">
+            <h1>Video Gallery</h1>
+    </tr>
+    <tr>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
         </td>
     </tr>
     <tr>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls>
+            <video width="500" height="320" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
             </video>
         </td>
