--- a/Day 2/VideoGallery.html
+++ b/Day 2/VideoGallery.html
@@ -3,53 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <style>
-        h1{
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <table>
     <tr>
-        <td colspan="3">
+        <td colspan="3" id="heading">
             <h1>Video Gallery</h1>
     </tr>
-    <tr>
+    <tr id="row1">
         <td>
-            <video width="500" height="320" controls autoplay>
+            <video width="320" height="240" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls autoplay>
-                <source src="Video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+            <video width="320" height="240" controls autoplay>
+                <source src="movie.mp4" type="video/mp4">
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls autoplay>
+            <video width="320" height="240" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
     </tr>
-    <tr>
+    <tr id="row2">
         <td>
-            <video width="500" height="320" controls autoplay>
+            <video width="320" height="240" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls autoplay>
+            <video width="320" height="240" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </td>
         <td>
-            <video width="500" height="320" controls autoplay>
+            <video width="320" height="240" controls autoplay>
                 <source src="Video.mp4" type="video/mp4">
             </video>
         </td>
