--- a/Day 3/Home.html
+++ b/Day 3/Home.html
@@ -34,8 +34,8 @@
                     <label><input type="password"></label></td>
                 </tr>
                 <tr>
-                    <td><input type="submit" value="Login"></td>
-                    <td><input type="reset" value="Clear"></td>
+                    <td id="inp1"><input type="submit" value="Login"></td>
+                    <td id="inp2"><input type="reset" value="Clear"></td>
                 </tr>
             </table>
         </div>
