--- a/Day 4/Home.html
+++ b/Day 4/Home.html
@@ -8,16 +8,16 @@
 <body>
 <div class="grid-container">
   <div class="grid-item navbar">
-    <div class="MenuItems">Home</div>
-    <div class="MenuItems">About</div>
-    <div class="MenuItems">Contact</div>
-    <div class="MenuItems">Services</div>
+    <div class="MenuItems"><a href="">Home</a></div>
+    <div class="MenuItems"><a href="">About</a></div>
+    <div class="MenuItems"><a href="">Contact</a></div>
+    <div class="MenuItems"><a href="">Services</a></div>
   </div>
   <div class="grid-item image">
     <img src="img.jpg" alt="">
   </div>
-  <div class="grid-item content">
-
+  <div class="grid-item news">
+    <marquee></marquee>
   </div>
   <div class="grid-item about">About</div>
   <div class="grid-item login">Login</div>
